--- a/modbus-master/src/main/resources/application.properties
+++ b/modbus-master/src/main/resources/application.properties
@@ -4,3 +4,14 @@ server.port=8080
 
 spring.data.mongodb.uri=${MONGO_URI}
 spring.data.mongodb.database=modbus-monitor
+
+# Actuator endpoints for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+management.health.mongo.enabled=true
+
+# CORS Configuration for direct API access
+spring.web.cors.allowed-origins=http://localhost,http://localhost:80
+spring.web.cors.allowed-methods=GET,POST,PUT,PATCH,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
