--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# MongoDB Configuration
-# Default: Uses MongoDB Atlas (cloud database)
-# To use local MongoDB: Change to mongodb://mongodb:27017/modbus-monitor
-MONGO_URI=mongodb+srv://jmhdilsha:Hasi1234@cluster-hasi-0.ahm07.mongodb.net/?retryWrites=true&w=majority
+# PostgreSQL Configuration
+POSTGRES_URL=jdbc:postgresql://postgres:5432/modbus_monitor
+POSTGRES_USERNAME=modbus_user
+POSTGRES_PASSWORD=modbus_pass_secure_2024
 
 # Modbus Slave Configuration
 SLAVE_ADDRESS=1
