--- a/modbus-master/src/main/resources/application.properties
+++ b/modbus-master/src/main/resources/application.properties
@@ -2,13 +2,36 @@ spring.application.name=modbus-master
 
 server.port=8080
 
-spring.data.mongodb.uri=${MONGO_URI}
-spring.data.mongodb.database=modbus-monitor
+# PostgreSQL Configuration
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USERNAME}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+# Connection Pool (HikariCP)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
 
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
-management.health.mongo.enabled=true
+management.health.db.enabled=true
 
 # CORS Configuration for direct API access
 spring.web.cors.allowed-origins=http://localhost,http://localhost:80
